MA-10616[Android] Update android_deconfig after merge with imx_4.9.51_imx8_beta1 branch
Update the android_defconfig after merge BSP branch to
imx_4.9.y_android_imx8_beta1 branch.

Change-Id: Id4b5d4731ceca685aac6d0ed41af2a24628c67d6
Signed-off-by: Zhang Bo <bo.zhang@nxp.com>

--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -405,12 +405,14 @@ CONFIG_IMX_DPU_CORE=y
 CONFIG_DRM=y
 CONFIG_DRM_NOUVEAU=y
 CONFIG_DRM_PANEL_SIMPLE=y
+CONFIG_DRM_PANEL_RAYDIUM_RM67191=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_ITE_IT6263=y
 CONFIG_DRM_IMX_PARALLEL_DISPLAY=y
 CONFIG_DRM_IMX_TVE=y
 CONFIG_DRM_IMX_LDB=y
 CONFIG_DRM_IMX_HDMI=y
+CONFIG_DRM_IMX_NWL_DSI=y
 CONFIG_DRM_IMX_HDP=y
 CONFIG_DRM_HISI_KIRIN=y
 CONFIG_FB_IMX64=y
@@ -651,6 +653,7 @@ CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
+CONFIG_CRYPTO_DEV_FSL_CAAM=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
