--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm.dtsi
@@ -2803,8 +2803,8 @@
 			<&clk IMX8QM_AUD_ASRC_0_MEM>,
 			<&clk IMX8QM_AUD_ACM_AUD_PLL_CLK0_CLK>,
 			<&clk IMX8QM_AUD_ACM_AUD_PLL_CLK1_CLK>,
-			<&clk IMX8QM_CLK_DUMMY>,
-			<&clk IMX8QM_CLK_DUMMY>,
+			<&clk IMX8QM_ACM_AUD_CLK0_SEL>,
+			<&clk IMX8QM_ACM_AUD_CLK1_SEL>,
 			<&clk IMX8QM_CLK_DUMMY>,
 			<&clk IMX8QM_CLK_DUMMY>,
 			<&clk IMX8QM_CLK_DUMMY>,
@@ -2843,8 +2843,8 @@
 			<&clk IMX8QM_AUD_ASRC_1_MEM>,
 			<&clk IMX8QM_AUD_ACM_AUD_PLL_CLK0_CLK>,
 			<&clk IMX8QM_AUD_ACM_AUD_PLL_CLK1_CLK>,
-			<&clk IMX8QM_CLK_DUMMY>,
-			<&clk IMX8QM_CLK_DUMMY>,
+			<&clk IMX8QM_ACM_AUD_CLK0_SEL>,
+			<&clk IMX8QM_ACM_AUD_CLK1_SEL>,
 			<&clk IMX8QM_CLK_DUMMY>,
 			<&clk IMX8QM_CLK_DUMMY>,
 			<&clk IMX8QM_CLK_DUMMY>,
