MLK-16898: arm64: dts: add the power domain for flexspi0
add the power domain for flexspi0 for iMX8QM/QXP in device tree.

Signed-off-by: Han Xu <han.xu@nxp.com>
(cherry picked from commit cf058c941bddb7f81655cd069ede458b9b8b61fa)

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm.dtsi
@@ -2895,6 +2895,7 @@
 		clocks = <&clk IMX8QM_FSPI0_CLK>;
 		assigned-clock-rates = <29000000>;
 		clock-names = "fspi";
+		power-domains = <&pd_lsio>;
 		status = "disabled";
 	};
 
