--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -456,6 +456,7 @@ CONFIG_SND_SOC_IMX_SPDIF=y
 CONFIG_SND_SOC_IMX_AMIX=y
 CONFIG_SND_SOC_IMX_CDNHDMI=y
 CONFIG_SND_SOC_AK4613=y
+CONFIG_SND_SOC_IMX_XTOR=y
 CONFIG_HIDRAW=y
 CONFIG_UHID=y
 CONFIG_HID_A4TECH=y
