MLK-18357-3: arm64: dts: Update 8M, 8QM and 8QXP dts files for dsi suspend/resume
Added no_clk_reset property for 8M dts files, since DSI doesn't need
it's clocks stopped during suspend.
Also, added power on delay for 8QM and 8QXP for a better suspend/resume
stability.

Signed-off-by: Robert Chiras <robert.chiras@nxp.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm-mek.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm-mek.dts
@@ -1332,6 +1332,7 @@
 };
 
 &mipi_dsi1 {
+	pwr-delay = <10>;
 	status = "okay";
 };
 
@@ -1373,6 +1374,7 @@
 };
 
 &mipi_dsi2 {
+	pwr-delay = <10>;
 	status = "okay";
 };
 
