--- a/arch/arm64/boot/dts/freescale/fsl-imx8mq.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mq.dtsi
@@ -639,6 +639,7 @@
 		assigned-clock-rates = <80000000>;
 		phys = <&mipi_dsi_phy>;
 		phy-names = "dphy";
+		no_clk_reset;
 		status = "disabled";
 
 		port@0 {
@@ -663,6 +664,7 @@
 		mux-sel = <&gpr>;
 		phys = <&mipi_dsi_phy>;
 		phy-names = "dphy";
+		no_clk_reset;
 		status = "disabled";
 
 		port@0 {
