--- a/arch/arm64/boot/dts/freescale/fsl-imx8qxp-mek.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qxp-mek.dts
@@ -1069,6 +1069,7 @@
 };
 
 &mipi_dsi1 {
+	pwr-delay = <10>;
 	status = "okay";
 };
 
@@ -1147,6 +1148,7 @@
 };
 
 &mipi_dsi2 {
+	pwr-delay = <10>;
 	status = "okay";
 };
 
