MA-11881-1 Align kernel configures after merge BSP
Align kernel configures after merge BSP

Change-Id: I950b7f2066b2b2c654c09861e9f4a831d54943d3
Signed-off-by: Richard Liu <xuegang.liu@nxp.com>

--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -661,6 +661,7 @@ CONFIG_ARM_SMMU=y
 CONFIG_ARCH_MXC_ARM64=y
 CONFIG_EXTCON_PTN5150=y
 CONFIG_IIO=y
+CONFIG_IMX8QXP_ADC=y
 CONFIG_PWM=y
 CONFIG_PWM_IMX=y
 CONFIG_PHY_XGENE=y
