--- a/arch/arm64/boot/dts/freescale/fsl-imx8mm.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mm.dtsi
@@ -843,79 +843,39 @@
 	lcdif: lcdif@32E00000 {
 		compatible = "fsl,imx8mm-lcdif", "fsl,imx28-lcdif";
 		reg = <0x0 0x32e00000 0x0 0x10000>;
-		clocks = <&clk IMX8MM_CLK_LCDIF_PIXEL_DIV>;
-		clock-names = "pix";
-		assigned-clocks = <&clk IMX8MM_CLK_LCDIF_PIXEL_SRC>;
-		assigned-clock-parents = <&clk IMX8MM_VIDEO_PLL1_OUT>;
-		assigned-clock-rate = <594000000>;
+		clocks = <&clk IMX8MM_CLK_LCDIF_PIXEL_DIV>,
+			 <&clk IMX8MM_CLK_DUMMY>,
+			 <&clk IMX8MM_CLK_DISP_AXI_ROOT>;
+		clock-names = "pix", "axi", "disp_axi";
+		assigned-clocks = <&clk IMX8MM_CLK_LCDIF_PIXEL_SRC>,
+				  <&clk IMX8MM_CLK_DISP_AXI_SRC>,
+				  <&clk IMX8MM_CLK_DISP_APB_SRC>;
+		assigned-clock-parents = <&clk IMX8MM_VIDEO_PLL1_OUT>,
+					 <&clk IMX8MM_SYS_PLL2_1000M>,
+					 <&clk IMX8MM_SYS_PLL1_800M>;
+		assigned-clock-rate = <594000000>, <500000000>, <200000000>;
 		interrupts = <GIC_SPI 5 IRQ_TYPE_LEVEL_HIGH>;
 		max-res = <1920>, <1080>;
 		status = "disabled";
-
-		port@0 {
-			lcdif_mipi_dsi: mipi-dsi-endpoint {
-				remote-endpoint = <&mipi_dsi_in>;
-			};
-		};
-	};
-
-	mipi_dsi_phy: dsi_phy@32e10300 {
-		compatible = "mixel,imx8mm-mipi-dsi-phy",
-			     "mixel,imx8mq-mipi-dsi-phy";
-		reg = <0x0 0x32e10300 0x0 0x100>;
-		#phy-cells = <0>;
-		status = "disabled";
-	};
-
-	mipi_dsi_bridge: mipi_dsi_bridge@32E10000 {
-		compatible = "nwl,mipi-dsi";
-		reg = <0x0 0x32e10000 0x0 0x400>;
-		interrupts = <GIC_SPI 18 IRQ_TYPE_LEVEL_HIGH>;
-		clocks = <&clk IMX8MM_CLK_DSI_PHY_REF_DIV>,
-			 <&clk IMX8MM_CLK_DSI_ESC_RX_DIV>,
-			 <&clk IMX8MM_CLK_IPG_DSI_ESC_RX_ROOT>;
-		clock-names = "phy_ref", "rx_esc", "tx_esc";
-		assigned-clocks = <&clk IMX8MM_CLK_DSI_ESC_RX_SRC>;
-		assigned-clock-parents = <&clk IMX8MM_SYS_PLL1_80M>;
-		assigned-clock-rates = <80000000>;
-		phys = <&mipi_dsi_phy>;
-		phy-names = "dphy";
-		status = "disabled";
-
-		port@0 {
-			mipi_dsi_bridge_in: endpoint {
-				remote-endpoint = <&mipi_dsi_out>;
-			};
-		};
 	};
 
 	mipi_dsi: mipi_dsi@32E10000 {
-		compatible = "fsl,imx8mm-mipi-dsi_drm", "fsl,imx8mq-mipi-dsi_drm";
+		compatible = "fsl,imx8mm-mipi-dsi", "fsl,imx7d-mipi-dsi";
+		reg = <0x0 0x32e10000 0x0 0x10000>;
 		clocks = <&clk IMX8MM_CLK_DSI_CORE_DIV>,
 			 <&clk IMX8MM_CLK_DSI_PHY_REF_DIV>;
-		clock-names = "core", "phy_ref";
+		clock-names = "mipi_cfg_clk", "mipi_pllref_clk";
 		assigned-clocks = <&clk IMX8MM_CLK_DSI_CORE_SRC>,
 				  <&clk IMX8MM_CLK_DSI_PHY_REF_SRC>;
 		assigned-clock-parents = <&clk IMX8MM_SYS_PLL1_266M>,
 					 <&clk IMX8MM_VIDEO_PLL1_OUT>;
 		assigned-clock-rates = <266000000>, <594000000>;
-		src = <&src>;
-		mux-sel = <&gpr>;
-		phys = <&mipi_dsi_phy>;
-		phys-names = "dphy";
+		interrupts = <GIC_SPI 18 IRQ_TYPE_LEVEL_HIGH>;
+		power-domains = <&mipi_pd>;
+		phy-ref-clkfreq = <27000000>;
+		data-lanes-num = <4>;
+		max-data-rate  = <1500000000>;
 		status = "disabled";
-
-		port@0 {
-			mipi_dsi_out: endpoint {
-				remote-endpoint = <&mipi_dsi_bridge_in>;
-			};
-		};
-
-		port@1 {
-			mipi_dsi_in: endpoint {
-				remote-endpoint = <&lcdif_mipi_dsi>;
-			};
-		};
 	};
 
 	pcie0: pcie@0x33800000 {
