MA-11942[Android] Add FB related config to align with BSP branch
Add Framebuffer related config to enable dispaly for evk-8mm board.

Change-Id: Ia3bb18c801b3c58fbf0c172f863553ea1429cb5a
Signed-off-by: Zhang Bo <bo.zhang@nxp.com>

--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -456,7 +456,7 @@ CONFIG_DRM=y
 CONFIG_DRM_NOUVEAU=y
 CONFIG_DRM_PANEL_SIMPLE=y
 CONFIG_DRM_PANEL_RAYDIUM_RM67191=y
-CONFIG_DRM_I2C_ADV7511=y
+# CONFIG_DRM_I2C_ADV7511 is not set
 CONFIG_DRM_ITE_IT6263=y
 CONFIG_DRM_IMX_PARALLEL_DISPLAY=y
 CONFIG_DRM_IMX_TVE=y
@@ -466,11 +466,15 @@ CONFIG_DRM_IMX_NWL_DSI=y
 CONFIG_DRM_IMX_HDP=y
 CONFIG_IMX_HDP_CEC=y
 CONFIG_DRM_HISI_KIRIN=y
-CONFIG_DRM_MXSFB=y
+# CONFIG_DRM_MXSFB is not set
 CONFIG_FB_IMX64=y
 CONFIG_FB_IMX64_DEBUG=y
 CONFIG_FB_ARMCLCD=y
-CONFIG_FB_MXC_DISP_FRAMEWORK=y
+CONFIG_FB_MXS=y
+CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
+CONFIG_FB_MXC_MIPI_DSI_SAMSUNG=y
+# CONFIG_FB_MXC_DISP_FRAMEWORK is not set
+CONFIG_FB_MXC_ADV7535=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_BACKLIGHT_LP855X=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
