MA-11945 [qcacld] Support pcie msi for 1CQ wifi
Support pcie msi in qcacld-2.0 wifi driver for 1CQ wifi

Change-Id: I3a9f56e3f101ae094a5f86008a85af6edd7772fd
Signed-off-by: yang.tian <yang.tian@nxp.com>

--- a/drivers/net/wireless/qcacld-2.0/Kbuild
+++ b/drivers/net/wireless/qcacld-2.0/Kbuild
@@ -1691,7 +1691,7 @@ CDEFINES += -DFEATURE_DPTRACE_ENABLE
 endif
 
 ifeq ($(CONFIG_HIF_PCI), 1)
-CDEFINES += -DFORCE_LEGACY_PCI_INTERRUPTS
+#CDEFINES += -DFORCE_LEGACY_PCI_INTERRUPTS
 endif
 
 ifeq ($(CONFIG_WLAN_THERMAL_SHUTDOWN), 1)
