--- a/arch/arm64/boot/dts/freescale/fsl-imx8mm-evk.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mm-evk.dts
@@ -694,6 +694,7 @@
        display0: display@0 {
                bits-per-pixel = <24>;
                bus-width = <24>;
+               fbpix = "ABGR32";
 
                display-timings {
                        native-mode = <&timing0>;
