--- a/arch/arm64/boot/dts/freescale/imx8mq-evk.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mq-evk.dts
@@ -77,8 +77,8 @@
 		trusty-irq {
 			use-gicv3-workaround;
 			compatible = "android,trusty-irq-v1";
-			interrupt-templates = <&trusty_ipi 0>;
 			interrupt-ranges = < 0 15 0>;
+			ipi-range = <8 15 8>;
 		};
 		trusty-virtio {
 			compatible = "android,trusty-virtio-v1";
@@ -86,11 +86,6 @@
 		trusty-log {
 			compatible = "android,trusty-log-v1";
 		};
-	};
-	trusty_ipi: interrupt-controller@0 {
-		compatible = "android,CustomIPI";
-		interrupt-controller;
-		#interrupt-cells = <1>;
 	};
 };
 
