--- a/arch/arm64/boot/dts/freescale/imx8qm-mek.dts
+++ b/arch/arm64/boot/dts/freescale/imx8qm-mek.dts
@@ -75,8 +75,8 @@
 		#size-cells = <2>;
 		trusty-irq {
 			compatible = "android,trusty-irq-v1";
-			interrupt-templates = <&trusty_ipi 0>;
 			interrupt-ranges = < 0 15 0>;
+			ipi-range = <8 15 8>;
 		};
 		trusty-virtio {
 			compatible = "android,trusty-virtio-v1";
@@ -84,11 +84,6 @@
 		trusty-log {
 			compatible = "android,trusty-log-v1";
 		};
-	};
-	trusty_ipi: interrupt-controller@0 {
-		compatible = "android,CustomIPI";
-		interrupt-controller;
-		#interrupt-cells = <1>;
 	};
 };
 
