AAUTO-97 USB mass storage device support added.

--- a/arch/arm64/configs/imx_v8_android_car2_defconfig
+++ b/arch/arm64/configs/imx_v8_android_car2_defconfig
@@ -242,7 +242,7 @@ CONFIG_SRAM=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_EEPROM_AT25=m
 # CONFIG_SCSI_PROC_FS is not set
-CONFIG_BLK_DEV_SD=m
+CONFIG_BLK_DEV_SD=y
 CONFIG_ATA=y
 # CONFIG_ATA_FORCE is not set
 CONFIG_MD=y
